Apply correct line-height to diffs
The typography refresh exposes a small shortcoming in the CSS used
for diff display; there is no line-height applied, causing inconsistent
display between skin (ie. too high in Vector). Adding line-height to the
diffs corrects this.

--- a/resources/src/mediawiki.action/mediawiki.action.history.diff.css
+++ b/resources/src/mediawiki.action/mediawiki.action.history.diff.css
@@ -46,12 +46,14 @@ td.diff-marker {
 	text-align: right;
 	font-weight: bold;
 	font-size: 1.25em;
+	line-height: 1.2;
 }
 
 td.diff-addedline,
 td.diff-deletedline,
 td.diff-context {
 	font-size: 88%;
+	line-height: 1.6;
 	vertical-align: top;
 	white-space: -moz-pre-wrap;
 	white-space: pre-wrap;
